Neyer/NetBeans/exoBootOnKubernetes/target/classes/META-INF/fabric8/openshift.yml
---
apiVersion: v1
kind: List
items:
- apiVersion: v1
  kind: Service
  metadata:
    annotations:
      fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/exoBootOnKubernetes
      fabric8.io/scm-tag: HEAD
      prometheus.io/port: "9779"
      prometheus.io/scrape: "true"
    labels:
      expose: "true"
      app: exoBootOnKubernetes
      provider: fabric8
      version: 0.0.1-SNAPSHOT
      group: com.example
    name: exobootonkubernetes
  spec:
    ports:
    - name: http
      port: 8080
      protocol: TCP
      targetPort: 8080
    selector:
      app: exoBootOnKubernetes
      provider: fabric8
      group: com.example
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/exoBootOnKubernetes
      fabric8.io/scm-tag: HEAD
    labels:
      app: exoBootOnKubernetes
      provider: fabric8
      version: 0.0.1-SNAPSHOT
      group: com.example
    name: exoBootOnKubernetes
    namespace: default
  spec:
    replicas: 1
    revisionHistoryLimit: 2
    selector:
      app: exoBootOnKubernetes
      provider: fabric8
      group: com.example
    strategy:
      rollingParams:
        timeoutSeconds: 3600
      type: Rolling
    template:
      metadata:
        annotations:
          fabric8.io/scm-tag: HEAD
          fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/exoBootOnKubernetes
        labels:
          app: exoBootOnKubernetes
          provider: fabric8
          version: 0.0.1-SNAPSHOT
          group: com.example
      spec:
        containers:
        - env:
          - name: POSTGRES_SERVICE
            valueFrom:
              configMapKeyRef:
                key: postgres.service.name
                name: postgres-config
          - name: POSTGRES_DB_NAME
            valueFrom:
              configMapKeyRef:
                key: postgres.db.name
                name: postgres-config
          - name: POSTGRES_DB_USER
            valueFrom:
              secretKeyRef:
                key: db.user.name
                name: db-security
          - name: POSTGRES_DB_PASSWORD
            valueFrom:
              secretKeyRef:
                key: db.user.password
                name: db-security
          image: example/exobootonkubernetes:latest
          imagePullPolicy: Always
          name: exoBootOnKubernetes
        - env:
          - name: KUBERNETES_NAMESPACE
            valueFrom:
              fieldRef:
                fieldPath: metadata.namespace
          image: example/exobootonkubernetes:latest
          imagePullPolicy: IfNotPresent
          name: spring-boot
          ports:
          - containerPort: 8080
            name: http
            protocol: TCP
          - containerPort: 9779
            name: prometheus
            protocol: TCP
          - containerPort: 8778
            name: jolokia
            protocol: TCP
          securityContext:
            privileged: false
    triggers:
    - type: ConfigChange
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      fabric8.io/scm-url: https://github.com/spring-projects/spring-boot/spring-boot-starter-parent/exoBootOnKubernetes
      fabric8.io/scm-tag: HEAD
    labels:
      expose: "true"
      app: exoBootOnKubernetes
      provider: fabric8
      version: 0.0.1-SNAPSHOT
      group: com.example
    name: exobootonkubernetes
  spec:
    port:
      targetPort: 8080
    to:
      kind: Service
      name: exobootonkubernetes
